[package]
name = "gblend"
version = "0.0.11"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
ethers = "2.0.14"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.14.0"
tokio = {version = "1.41.0" ,  features = ["full"]}
toml = "0.8.19"
toml_edit = "0.22.22"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
test-case = "3.1"

[[bin]]
name = "gblend"
path = "src/main.rs"
