[workspace]
members = [
  "benches/",
  "crates/anvil/",
  "crates/anvil/core/",
  "crates/anvil/rpc/",
  "crates/anvil/server/",
  "crates/cast/",
  "crates/cheatcodes/",
  "crates/cheatcodes/spec/",
  "crates/chisel/",
  "crates/cli/",
  "crates/common/",
  "crates/config/",
  "crates/debugger/",
  "crates/doc/",
  "crates/evm/core/",
  "crates/evm/coverage/",
  "crates/evm/evm/",
  "crates/evm/fuzz/",
  "crates/evm/traces/",
  "crates/fmt/",
  "crates/forge/",
  "crates/lint/",
  "crates/macros/",
  "crates/primitives/",
  "crates/script-sequence/",
  "crates/test-utils/",
]
resolver = "2"

[workspace.package]
authors = ["Foundry Contributors"]
edition = "2024"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]
homepage = "https://github.com/fluentlabs-xyz/gblend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluentlabs-xyz/gblend"
rust-version = "1.89"
version = "1.6.0"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg-macro = "warn"
explicit_iter_loop = "warn"
manual-string-new = "warn"
octal-escapes = "allow"
redundant-clone = "warn"
uninlined-format-args = "warn"
use-self = "warn"
# until <https://github.com/rust-lang/rust-clippy/issues/13885> is fixed
literal-string-with-formatting-args = "allow"
result_large_err = "allow"

[workspace.lints.rust]
redundant-lifetimes = "warn"
redundant_imports = "warn"
rust-2018-idioms = "warn"
unused-must-use = "warn"
# unreachable-pub = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
# debug = "line-tables-only"
# split-debuginfo = "unpacked"

[profile.release]
codegen-units = 16
debug = "none"
lto = "thin"
opt-level = 3
panic = "abort"
strip = "debuginfo"

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = "full"
inherits = "release"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.dist]
codegen-units = 1
inherits = "release"
lto = "fat"

# Speed up tests and dev build.
[profile.dev.package]
# Solc and artifacts.
foundry-compilers-artifacts-solc.opt-level = 3
foundry-compilers-core.opt-level = 3
foundry-compilers.opt-level = 3
serde.opt-level = 3
serde_json.opt-level = 3

foundry-solang-parser.opt-level = 3
lalrpop-util.opt-level = 3

solar-ast.opt-level = 3
solar-compiler.opt-level = 3
solar-data-structures.opt-level = 3
solar-interface.opt-level = 3
solar-parse.opt-level = 3
solar-sema.opt-level = 3

# CLI.
clap.opt-level = 3
clap_builder.opt-level = 3
clap_lex.opt-level = 3

# EVM.
alloy-dyn-abi.opt-level = 3
alloy-evm.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3

bitvec.opt-level = 3
revm-bytecode.opt-level = 3
revm-context-interface.opt-level = 3
revm-context.opt-level = 3
revm-database-interface.opt-level = 3
revm-database.opt-level = 3
revm-handler.opt-level = 3
revm-inspector.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm-state.opt-level = 3
revm.opt-level = 3

revm-inspectors.opt-level = 3

ruint.opt-level = 3

keccak.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3

# Fuzzing.
foundry-evm-fuzz.opt-level = 3
ppv-lite86.opt-level = 3
proptest.opt-level = 3
rand.opt-level = 3
rand_chacha.opt-level = 3

# Backtraces.
addr2line.opt-level = 3
backtrace.opt-level = 3
gimli.opt-level = 3

# Forking.
axum.opt-level = 3

# Keystores.
scrypt.opt-level = 3

# Misc.
foldhash.opt-level = 3
hashbrown.opt-level = 3
rayon-core.opt-level = 3
rayon.opt-level = 3
regex-automata.opt-level = 3
regex-syntax.opt-level = 3
regex.opt-level = 3
walkdir.opt-level = 3

# Override packages which aren't perf-sensitive for faster compilation speed and smaller binary size.
[profile.release.package]
alloy-sol-macro-expander.opt-level = "s"
figment2.opt-level = "s"
foundry-compilers-artifacts-solc.opt-level = "s"
foundry-config.opt-level = "s"
html5ever.opt-level = "s"
mdbook-driver.opt-level = "s"
prettyplease.opt-level = "s"
protobuf.opt-level = "s"
pulldown-cmark.opt-level = "s"
syn-solidity.opt-level = "s"
syn.opt-level = "s"
trezor-client.opt-level = "s"

# Networking stack (not perf-critical for CLI tools).
h2.opt-level = "s"
hyper-util.opt-level = "s"
hyper.opt-level = "s"
reqwest.opt-level = "s"
rustls.opt-level = "s"
tower-http.opt-level = "s"
tower.opt-level = "s"

# Doc generation / templating.
font-awesome-as-a-crate.opt-level = "s"
handlebars.opt-level = "s"
mdbook-core.opt-level = "s"
mdbook-html.opt-level = "s"

# Watch mode.
watchexec-events.opt-level = "s"
watchexec-signals.opt-level = "s"
watchexec-supervisor.opt-level = "s"
watchexec.opt-level = "s"

# Soldeer package manager.
soldeer-commands.opt-level = "s"
soldeer-core.opt-level = "s"

# Parsing / editing (not perf-sensitive in CLI).
toml.opt-level = "s"
toml_edit.opt-level = "s"

# Block explorers / verification.
foundry-block-explorers.opt-level = "s"

# Misc CLI dependencies.
clap_builder.opt-level = "s"
clap_complete.opt-level = "s"
comfy-table.opt-level = "s"
crossterm.opt-level = "s"
dialoguer.opt-level = "s"
indicatif.opt-level = "s"
ratatui.opt-level = "s"

# Alloy JSON (parsing, not hot path).
alloy-json-abi.opt-level = "s"

[workspace.dependencies]
anvil = {path = "crates/anvil"}
cast = {path = "crates/cast"}
chisel = {path = "crates/chisel"}
forge = {path = "crates/forge"}

forge-doc = {path = "crates/doc"}
forge-fmt = {path = "crates/fmt"}
forge-lint = {path = "crates/lint"}
forge-script = {path = "crates/script"}
forge-script-sequence = {path = "crates/script-sequence"}
forge-sol-macro-gen = {path = "crates/sol-macro-gen"}
forge-verify = {path = "crates/verify"}
foundry-cheatcodes = {path = "crates/cheatcodes"}
foundry-cheatcodes-spec = {path = "crates/cheatcodes/spec"}
foundry-cli = {path = "crates/cli"}
foundry-common = {path = "crates/common"}
foundry-common-fmt = {path = "crates/common/fmt"}
foundry-config = {path = "crates/config"}
foundry-debugger = {path = "crates/debugger"}
foundry-evm = {path = "crates/evm/evm"}
foundry-evm-abi = {path = "crates/evm/abi"}
foundry-evm-core = {path = "crates/evm/core"}
foundry-evm-coverage = {path = "crates/evm/coverage"}
foundry-evm-fuzz = {path = "crates/evm/fuzz"}
foundry-evm-networks = {path = "crates/evm/networks"}
foundry-evm-traces = {path = "crates/evm/traces"}
foundry-linking = {path = "crates/linking"}
foundry-macros = {path = "crates/macros"}
foundry-primitives = {path = "crates/primitives"}
foundry-test-utils = {path = "crates/test-utils"}
foundry-wallets = {path = "crates/wallets"}

# fluentbase
fluentbase-build = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "release/v1.2.0" }
fluentbase-revm = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "release/v1.2.0", default-features = false, features = ["std"] }
fluentbase-evm = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "release/v1.2.0", default-features = false, features = ["std"] }
fluentbase-types = { git = "https://github.com/fluentlabs-xyz/fluentbase", branch = "release/v1.2.0", default-features = false, features = ["std"] }

# solc & compilation utilities
foundry-block-explorers = {version = "0.22.0", default-features = false}
foundry-compilers = {version = "0.19.14", default-features = false, features = [
  "rustls",
  "svm-solc",
]}
foundry-fork-db = "0.22"
solang-parser = {version = "=0.3.9", package = "foundry-solang-parser"}
solar = {package = "solar-compiler", version = "=0.1.8", default-features = false}
svm = {package = "svm-rs", version = "0.5", default-features = false, features = [
  "rustls",
]}

## alloy
alloy-consensus = {version = "1.4", default-features = false}
alloy-contract = {version = "1.4", default-features = false}
alloy-eip5792 = {version = "1.4", default-features = false}
alloy-eips = {version = "1.4", default-features = false}
alloy-ens = {version = "1.4", default-features = false}
alloy-genesis = {version = "1.4", default-features = false}
alloy-hardforks = {version = "0.4.7", default-features = false}
alloy-json-rpc = {version = "1.4", default-features = false}
alloy-network = {version = "1.4", default-features = false}
alloy-op-hardforks = {version = "0.4.7", default-features = false}
alloy-provider = {version = "1.4", default-features = false}
alloy-pubsub = {version = "1.4", default-features = false}
alloy-rpc-client = {version = "1.4", default-features = false}
alloy-rpc-types = {version = "1.4", default-features = true}
alloy-rpc-types-beacon = {version = "1.4", default-features = true}
alloy-rpc-types-eth = {version = "1.4", default-features = false}
alloy-serde = {version = "1.4", default-features = false}
alloy-signer = {version = "1.4", default-features = false}
alloy-signer-aws = {version = "1.4", default-features = false}
alloy-signer-gcp = {version = "1.4", default-features = false}
alloy-signer-ledger = {version = "1.4", default-features = false}
alloy-signer-local = {version = "1.4", default-features = false}
alloy-signer-trezor = {version = "1.4", default-features = false}
alloy-signer-turnkey = {version = "1.4", default-features = false}
alloy-transport = {version = "1.4", default-features = false}
alloy-transport-http = {version = "1.4", default-features = false}
alloy-transport-ipc = {version = "1.4", default-features = false}
alloy-transport-ws = {version = "1.4", default-features = false}

## alloy-core
alloy-dyn-abi = "1.5.2"
alloy-json-abi = "1.5.2"
alloy-primitives = {version = "1.5.2", features = [
  "getrandom",
  "rand",
  "map-fxhash",
  "map-foldhash",
]}
alloy-sol-macro-expander = "1.5.2"
alloy-sol-macro-input = "1.5.2"
alloy-sol-types = "1.5.2"

alloy-chains = "0.2"
alloy-rlp = "0.3"
alloy-trie = "0.9"

## op-alloy
op-alloy-consensus = "0.23.1"
op-alloy-flz = "0.13.1"
op-alloy-rpc-types = "0.23.1"

## alloy-evm
alloy-evm = "=0.26.3"
alloy-op-evm = "=0.26.3"

# revm
op-revm = {version = "15.0.0", default-features = false}
revm = {version = "34.0.0", default-features = false}
revm-inspectors = {version = "0.34.0", features = ["serde"]}

## cli
anstream = "0.6"
anstyle = "1.0"
clap_complete = "4"
clap_complete_nushell = "4"
dialoguer = {version = "0.12", default-features = false, features = [
  "password",
]}

# macros
async-trait = "0.1"
derive_more = {version = "2.1", features = ["full"]}
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
thiserror = "2"

# allocators
mimalloc = "0.1"
tikv-jemallocator = "0.6"

# misc
auto_impl = "1"
axum = "0.8"
base64 = "0.22"
bytes = "1.11"
chrono = {version = "0.4", default-features = false, features = [
  "clock",
  "std",
]}
ciborium = "0.2"
color-eyre = "0.6"
comfy-table = "7"
dirs = "6"
dunce = "1"
ethereum_ssz = "0.10"
evm-disassembler = "0.6"
evmole = "0.8"
eyre = "0.6"
figment = {package = "figment2", version = "0.11"}
flate2 = "1.1"
futures = {version = "0.3", default-features = false}
heck = "0.5"
hyper = "1.8"
indicatif = "0.18"
itertools = "0.14"
jiff = {version = "0.2", default-features = false, features = [
  "std",
  "perf-inline",
]}
jsonpath_lib = "0.3"
k256 = "0.13"
memchr = "2.7"
mesc = "0.3"
num-format = "0.4"
parking_lot = "0.12"
path-slash = "0.2"
prettyplease = "0.2"
proptest = "1.9.0"
rand = "0.9"
rand_08 = {package = "rand", version = "0.8"}
rayon = "1"
regex = {version = "1", default-features = false}
reqwest = {version = "0.12", default-features = false, features = [
  "rustls-tls",
  "rustls-tls-native-roots",
]}
rustls = "0.23"
semver = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
similar-asserts = "1.7"
soldeer-commands = "=0.10.0"
soldeer-core = {version = "=0.10.0", features = ["serde"]}
strum = "0.27"
tempfile = "3.23"
tokio = "1"
toml = "0.9"
toml_edit = "0.24"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
uuid = "1.19.0"
vergen = {version = "9", default-features = false, features = [
  "build",
  "cargo",
]}
vergen-git2 = "9"
walkdir = "2"
yansi = {version = "1.0", features = ["detect-tty", "detect-env"]}

# Tempo
tempo-primitives = {git = "https://github.com/tempoxyz/tempo", tag = "v1.0.0", default-features = false, features = ["serde"]}

## Pinned dependencies. Enabled for the workspace in crates/test-utils.

# testing
snapbox = {version = "0.6", features = ["json", "regex", "term-svg"]}

# Use unicode-rs which has a smaller binary size than the default ICU4X as the IDNA backend, used
# by the `url` crate.
# See the `idna_adapter` README.md for more details: https://docs.rs/crate/idna_adapter/latest
idna_adapter = "=1.1.0"

[patch.crates-io]
# https://github.com/rust-cli/rexpect/pull/106
rexpect = {git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6a85bedbae71a01cc578958fc"}

# --- GBlend / Fluentbase patches (enabled) ---
op-revm = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-bytecode = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-context = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-context-interface = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-database = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-database-interface = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-inspector = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-interpreter = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-primitives = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}
revm-state = {git = "https://github.com/fluentlabs-xyz/revm-rwasm.git", branch = "v103-patched"}

alloy-evm = {git = "https://github.com/fluentlabs-xyz/alloy-rwasm", branch = "v26-patched"}
alloy-op-evm = {git = "https://github.com/fluentlabs-xyz/alloy-rwasm", branch = "v26-patched"}

# Local dev overrides (optional)
# revm = { path = "../revm-rwasm/crates/revm" }
# revm-bytecode = { path = "../revm-rwasm/crates/bytecode" }
# revm-database = { path = "../revm-rwasm/crates/database" }
# revm-state = { package = "revm-state", path = "../revm-rwasm/crates/state" }
# revm-primitives = { path = "../revm-rwasm/crates/primitives" }
# revm-interpreter = { path = "../revm-rwasm/crates/interpreter" }
# revm-inspector = { path = "../revm-rwasm/crates/inspector" }
# revm-context = { path = "../revm-rwasm/crates/context" }
# revm-context-interface = { path = "../revm-rwasm/crates/context/interface" }
# revm-database-interface = { path = "../revm-rwasm/crates/database/interface" }
# op-revm = { path = "../revm-rwasm/crates/op-revm" }
# revm-handler = { path = "../revm-rwasm/crates/handler" }
# revm-precompile = { path = "../revm-rwasm/crates/precompile" }
# alloy-evm = { path = "../alloy-evm/crates/evm" }
# alloy-op-evm = { path = "../alloy-evm/crates/op-evm" }

## alloy-core
# alloy-dyn-abi = { path = "../../alloy-rs/core/crates/dyn-abi" }
# alloy-json-abi = { path = "../../alloy-rs/core/crates/json-abi" }
# alloy-primitives = { path = "../../alloy-rs/core/crates/primitives" }
# alloy-sol-macro = { path = "../../alloy-rs/core/crates/sol-macro" }
# alloy-sol-macro-expander = { path = "../../alloy-rs/core/crates/sol-macro-expander" }
# alloy-sol-macro-input = { path = "../../alloy-rs/core/crates/sol-macro-input" }
# alloy-sol-type-parser = { path = "../../alloy-rs/core/crates/sol-type-parser" }
# alloy-sol-types = { path = "../../alloy-rs/core/crates/sol-types" }
# syn-solidity = { path = "../../alloy-rs/core/crates/syn-solidity" }

## alloy
# alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-ens = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
# alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }

## alloy-evm
# alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }
# alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "staging-revm" }

## revm (upstream notes)
# revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
# op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "7e59936" }
# revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "staging-revm" }

## foundry
# foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
# foundry-compilers = { git = "https://github.com/foundry-rs/compilers.git", branch = "main" }
# foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", rev = "b4299fc" }

# solar
solar = {package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129"}
solar-ast = {package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129"}
solar-interface = {package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129"}
solar-sema = {package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129"}
