[package]
name = "foundry-common"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
foundry-block-explorers = {workspace = true, features = ["foundry-compilers"]}
foundry-common-fmt.workspace = true
foundry-compilers.workspace = true

alloy-chains.workspace = true
alloy-consensus = {workspace = true, features = ["k256"]}
alloy-dyn-abi = {workspace = true, features = ["arbitrary", "eip712"]}
alloy-eips.workspace = true
alloy-json-abi.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives = {workspace = true, features = [
  "serde",
  "getrandom",
  "arbitrary",
  "rlp",
]}
alloy-provider.workspace = true
alloy-pubsub.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types = {workspace = true, features = ["eth", "engine"]}
alloy-serde.workspace = true
alloy-sol-types = {workspace = true, features = ["json"]}
alloy-transport-http = {workspace = true, features = [
  "reqwest",
  "reqwest-rustls-tls",
]}
alloy-transport-ipc.workspace = true
alloy-transport-ws.workspace = true
alloy-transport.workspace = true

revm.workspace = true
solar.workspace = true

fluentbase-build.workspace = true

tower.workspace = true

clap = {version = "4", features = ["derive", "env", "unicode", "wrap_help"]}
comfy-table.workspace = true
dunce.workspace = true
eyre.workspace = true
itertools.workspace = true
jiff.workspace = true
num-format.workspace = true
path-slash.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
walkdir.workspace = true
yansi.workspace = true

anstream.workspace = true
anstyle.workspace = true
ciborium.workspace = true

flate2.workspace = true
toml = "0.8.23"

[build-dependencies]
chrono.workspace = true
vergen = {workspace = true, features = ["build", "emit_and_set"]}
vergen-git2 = {workspace = true}

[dev-dependencies]
axum = {workspace = true}
tempfile = "3.20.0"
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
