[package]
description = "Contract verification tools"
name = "forge-verify"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
alloy-provider = {workspace = true, features = ["trace-api"]}
alloy-rpc-types = {workspace = true, features = ["eth", "trace"]}
eyre.workspace = true
foundry-block-explorers = {workspace = true, features = ["foundry-compilers"]}
foundry-cli.workspace = true
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-config.workspace = true
foundry-evm-networks.workspace = true
foundry-evm.workspace = true
revm = {workspace = true}
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

async-trait.workspace = true
base64 = "0.22.1"
clap = {version = "4", features = ["derive", "env", "unicode", "wrap_help"]}
flate2 = "1.1.2"
futures.workspace = true
itertools.workspace = true
regex = {workspace = true, default-features = false}
reqwest = {workspace = true, features = ["json"]}
semver.workspace = true
tar = "0.4.44"
url.workspace = true
yansi.workspace = true

[dev-dependencies]
foundry-test-utils.workspace = true
tempfile.workspace = true
tokio = {workspace = true, features = ["macros"]}
