[package]
name = "power-calculator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fluentbase-sdk = { version = "1.2.0", default-features = false }

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []

[profile.dev]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
